force-app/main/default/objects/CWS_Trigger_Switch__c/CWS_Trigger_Switch__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Switch to turn trigger ON or OFF</description>
    <label>CWS_Trigger_Switch</label>
</CustomObject>