force-app/main/default/objects/CWS_Trigger_Switch__c/fields/CWS_AccountTrigger__c.field-meta.xml
<CustomField>
    <fullName>CWS_AccountTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Switch for Account Trigger</description>
    <inlineHelpText>Checked = Active
Unchecked = Inactive</inlineHelpText>
    <label>Account Trigger</label>
    <type>Checkbox</type>
</CustomField>