force-app/main/default/objects/CWS_Trigger_Switch__c/fields/CWS_AgreementTrigger__c.field-meta.xml
<CustomField>
    <fullName>CWS_AgreementTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Switch for Agreement Trigger</description>
    <inlineHelpText>Checked = Active
Unchecked = Inactive</inlineHelpText>
    <label>Agreement Trigger</label>
    <type>Checkbox</type>
</CustomField>