force-app/main/default/objects/CWS_Trigger_Switch__c/fields/CWS_Approval_Trigger__c.field-meta.xml
<CustomField>
    <fullName>CWS_Approval_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>SBAA Approval Trigger
Checked = Active
Unchecked = Inactive</description>
    <inlineHelpText>SBAA Approval Trigger
Checked = Active
Unchecked = Inactive</inlineHelpText>
    <label>Approval Trigger</label>
    <type>Checkbox</type>
</CustomField>