force-app/main/default/objects/CWS_Trigger_Switch__c/fields/CWS_Attachment_trigger__c.field-meta.xml
<CustomField>
    <fullName>CWS_Attachment_trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Attachment trigger</label>
    <type>Checkbox</type>
</CustomField>