force-app/main/default/objects/CWS_Trigger_Switch__c/fields/CWS_ContactTrigger__c.field-meta.xml
<CustomField>
    <fullName>CWS_ContactTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Switch for Account Object - Triggers, Workflow, Process Builder</description>
    <inlineHelpText>Checked = Active
Unchecked = Inactive</inlineHelpText>
    <label>Contact Trigger</label>
    <type>Checkbox</type>
</CustomField>