force-app/main/default/objects/CWS_Trigger_Switch__c/fields/CWS_ContentDocumentLinkTrigger__c.field-meta.xml
<CustomField>
    <fullName>CWS_ContentDocumentLinkTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Content Document Link Trigger</label>
    <type>Checkbox</type>
</CustomField>