force-app/main/default/objects/CWS_Trigger_Switch__c/fields/CWS_ContentDocumentTrigger__c.field-meta.xml
<CustomField>
    <fullName>CWS_ContentDocumentTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Content Document Trigger</label>
    <type>Checkbox</type>
</CustomField>