force-app/main/default/objects/CWS_Trigger_Switch__c/fields/CWS_ContractTrigger__c.field-meta.xml
<CustomField>
    <fullName>CWS_ContractTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Switch for Contract trigger</description>
    <inlineHelpText>Checked = Active
Unchecked = Inactive</inlineHelpText>
    <label>Contract Trigger</label>
    <type>Checkbox</type>
</CustomField>