force-app/main/default/objects/CWS_Trigger_Switch__c/fields/CWS_DiscountTierTrigger__c.field-meta.xml
<CustomField>
    <fullName>CWS_DiscountTierTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Discount tier Trigger</description>
    <inlineHelpText>Discount tier Trigger</inlineHelpText>
    <label>DiscountTierTrigger</label>
    <type>Checkbox</type>
</CustomField>