force-app/main/default/objects/CWS_Trigger_Switch__c/fields/CWS_Disy_Reseller_Trigger__c.field-meta.xml
<CustomField>
    <fullName>CWS_Disy_Reseller_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disy/Reseller Trigger</label>
    <type>Checkbox</type>
</CustomField>