force-app/main/default/objects/CWS_Trigger_Switch__c/fields/CWS_DocusignEnvelopTrigger__c.field-meta.xml
<CustomField>
    <fullName>CWS_DocusignEnvelopTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Docusign Envelope Trigger</label>
    <type>Checkbox</type>
</CustomField>