force-app/main/default/objects/CWS_Trigger_Switch__c/fields/CWS_EventTrigger__c.field-meta.xml
<CustomField>
    <fullName>CWS_EventTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Event trigger</description>
    <label>CWS_EventTrigger</label>
    <type>Checkbox</type>
</CustomField>