force-app/main/default/objects/CWS_Trigger_Switch__c/fields/CWS_LeadTrigger__c.field-meta.xml
<CustomField>
    <fullName>CWS_LeadTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>trigger switch for Lead</description>
    <inlineHelpText>Checked = Active
Unchecked = Inactive</inlineHelpText>
    <label>Lead Trigger</label>
    <type>Checkbox</type>
</CustomField>