force-app/main/default/objects/CWS_Trigger_Switch__c/fields/CWS_LegacyDataMigration__c.field-meta.xml
<CustomField>
    <fullName>CWS_LegacyDataMigration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this checkbox during legacy data migration to run only specific migration logic</description>
    <inlineHelpText>Check this checkbox during legacy data migration to run only specific migration logic</inlineHelpText>
    <label>Legacy Data Migration</label>
    <type>Checkbox</type>
</CustomField>