force-app/main/default/objects/CWS_Trigger_Switch__c/fields/CWS_OLITrigger__c.field-meta.xml
<CustomField>
    <fullName>CWS_OLITrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Switch for OpportunityLineItem Trigger</description>
    <inlineHelpText>Checked = Active
Unchecked = Inactive</inlineHelpText>
    <label>OpportunityLineItem Trigger</label>
    <type>Checkbox</type>
</CustomField>