force-app/main/default/objects/CWS_Trigger_Switch__c/fields/CWS_OpportunityTeamMember_Trigger__c.field-meta.xml
<CustomField>
    <fullName>CWS_OpportunityTeamMember_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Switch for OpportunityTeamMember Trigger</description>
    <inlineHelpText>Checked = Active
Unchecked = Inactive</inlineHelpText>
    <label>OpportunityTeamMember Trigger</label>
    <type>Checkbox</type>
</CustomField>