force-app/main/default/objects/CWS_Trigger_Switch__c/fields/CWS_OpportunityTrigger__c.field-meta.xml
<CustomField>
    <fullName>CWS_OpportunityTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Switch for Opportunity Trigger</description>
    <inlineHelpText>Checked = Active
Unchecked = Inactive</inlineHelpText>
    <label>Opportunity Trigger</label>
    <type>Checkbox</type>
</CustomField>