force-app/main/default/objects/CWS_Trigger_Switch__c/fields/CWS_OrderItemTrigger__c.field-meta.xml
<CustomField>
    <fullName>CWS_OrderItemTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Checked = Active
Unchecked = Inactive</inlineHelpText>
    <label>Order Item Trigger</label>
    <type>Checkbox</type>
</CustomField>