force-app/main/default/objects/CWS_Trigger_Switch__c/fields/CWS_ProductOptionTrigger__c.field-meta.xml
<CustomField>
    <fullName>CWS_ProductOptionTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Product Option Trigger</description>
    <inlineHelpText>Product Option Trigger</inlineHelpText>
    <label>ProductOptionTrigger</label>
    <type>Checkbox</type>
</CustomField>