force-app/main/default/objects/CWS_Trigger_Switch__c/fields/CWS_ProductTrigger__c.field-meta.xml
<CustomField>
    <fullName>CWS_ProductTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked = Active
Unchecked = Inactive</description>
    <inlineHelpText>Checked = Active
Unchecked = Inactive</inlineHelpText>
    <label>Product Trigger</label>
    <type>Checkbox</type>
</CustomField>