force-app/main/default/objects/CWS_Trigger_Switch__c/fields/CWS_QuoteDocument_Trigger__c.field-meta.xml
<CustomField>
    <fullName>CWS_QuoteDocument_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Quote Document Trigger Switch.
Checked = Active
Unchecked = Inactive</description>
    <inlineHelpText>Checked = Active
Unchecked = Inactive</inlineHelpText>
    <label>QuoteDocument Trigger</label>
    <type>Checkbox</type>
</CustomField>