force-app/main/default/objects/CWS_Trigger_Switch__c/fields/CWS_RenewalJobStatusCheck__c.field-meta.xml
<CustomField>
    <fullName>CWS_RenewalJobStatusCheck__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked=Active, Uncheckec=Inactive. Switch to Turn ON/OFF the retry code for CWS_RenewalBatch.</description>
    <inlineHelpText>Checked=Active, Uncheckec=Inactive. Switch to Turn ON/OFF the retry code for CWS_RenewalBatch.</inlineHelpText>
    <label>RenewalJobStatusCheck</label>
    <type>Checkbox</type>
</CustomField>